lore-parser/src/snapshots/lore_parser__parser__tests__parse_alias.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
     prefix spotify:artist:2Hkut4rAAyrQxRdof7FVJq as @Rush 

output:

Ok(
    Structure {
        filename: "$name",
        items: [
            Alias {
                uri: URI(
                    "spotify:artist:2Hkut4rAAyrQxRdof7FVJq",
                ),
                prefix: URI(
                    "@Rush",
                ),
            },
        ],
    },
)

