lore-parser/src/snapshots/lore_parser__parser__tests__parse_alias_with_a_missing_uri.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
     prefix as @Rush 

output:

Err(
    UseExpectsURI,
)

