lore-parser/src/snapshots/lore_parser__parser__tests__parse_alias_with_something_that_isnt_a_uri.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
     prefix 2Hkut4rAAyrQxRdof7FVJq as @Rush 

output:

Err(
    ParseError {
        src: NamedSource {
            name: "$name",
            source: "<redacted>",
        ,
        span: SourceSpan {
            offset: SourceOffset(
                8,
            ),
            length: SourceOffset(
                1,
            ),
        },
        filename: "$name",
        error: UseExpectsURI,
    },
)

