lore-parser/src/snapshots/lore_parser__parser__tests__parse_alias_with_uri_but_missing_keyword_as.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
     prefix spotify:hello @Rush 

output:

Err(
    PrefixIsMissingTheAsKeyword,
)

