lore-parser/src/snapshots/lore_parser__parser__tests__parse_alias_with_uri_but_missing_the_aliased_name.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
     use spotify:hello as

output:

Err(
    UseIsMissingTheAliasedName,
)

