lore-parser/src/snapshots/lore_parser__parser__tests__parse_attr_with_aliased_name.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
    attr Name

output:

Ok(
    Structure {
        filename: "$name",
        items: [
            Attribute {
                name: Alias(
                    "Name",
                ),
                fields: [],
            },
        ],
    },
)

