lore-parser/src/snapshots/lore_parser__parser__tests__parse_attr_with_fields_empty.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
     attr Name {} 

output:

Ok(
    Structure {
        items: [
            Attribute {
                name: Alias(
                    "Name",
                ),
                fields: [],
            },
        ],
    },
)

