lore-parser/src/snapshots/lore_parser__parser__tests__parse_attr_with_fields_incomplete.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
     attr Name { 

output:

Err(
    ParseError {
        src: NamedSource {
            name: "$name",
            source: "<redacted>",
        ,
        span: SourceSpan {
            offset: SourceOffset(
                13,
            ),
            length: SourceOffset(
                0,
            ),
        },
        filename: "$name",
        error: IncompleteFieldBlock,
    },
)

