lore-parser/src/snapshots/lore_parser__parser__tests__parse_attr_with_uri_name.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
    attr spotify:field:Name

output:

Ok(
    Structure {
        filename: "$name",
        items: [
            Attribute {
                name: URI(
                    URI(
                        "spotify:field:Name",
                    ),
                ),
                fields: [],
            },
        ],
    },
)

