lore-parser/src/snapshots/lore_parser__parser__tests__parse_attr_without_aliased_name.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
    attr Name

output:

Ok(
    Structure(
        [
            Attribute {
                name: Alias(
                    "Name",
                ),
                fields: [],
            },
        ],
    ),
)

