lore-parser/src/snapshots/lore_parser__parser__tests__parse_kind_with_aliased_name.snap
---
source: lore-parser/src/parser.rs
expression: snapshot

---

input:
    kind Hello

output:

Ok(
    Structure(
        [
            Kind {
                name: Alias(
                    "Hello",
                ),
            },
        ],
    ),
)

